apps/demo3/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage-demo3
  labels:
    "backstage.io/kubernetes-id": backstage-demo3
