apps/demo3/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    "networking.istio.io/service-type": ClusterIP
  name: backstage-demo3-gateway
  namespace: backstage-demo3
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-demo3
  namespace: backstage-demo3
spec:
  parentRefs:
  - name: backstage-demo3-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backstage-demo3
      port: 8080
