apps/demo3/base/httpRouteCanary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-demo3-canary
  namespace: backstage-demo3
spec:
  parentRefs:
  - name: backstage-demo3-gateway
  rules:
  - backendRefs:
      - name: backstage-demo3
        port: 8080
  - matches:
    - headers:
      - name: traffic
        value: test
    backendRefs:
    - name: backstage-demo3-v2
      port: 8080
